--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
 .hidden {
     display: none;
 }
+
+#content {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(3, 1fr);
+}
+
+#header {
+    grid-column: 1/2;
+    grid-row: 1/4;
+}
+
+#mainArea {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+#navBar {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
